# trades-hall-omni-twin

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  STATUS.md  TECHNIQUE_01_CATEGORY_THEORY.md  TECHNIQUE_02_OPTIMAL_TRANSPORT.md  TECHNIQUE_03_TDA_PERSISTENT_HOMOLOGY (1).md  TECHNIQUE_04_STOCHASTIC_PRICING.md  TECHNIQUE_05_PHYSICS_INSPIRED_SOLVERS.md  TECHNIQUE_06_HPC_PARALLEL_ARCHITECTURE.md  TECHNIQUE_07_STATISTICAL_LEARNING_THEORY.md  TECHNIQUE_08_SIGNAL_PROCESSING.md  TECHNIQUE_09_OPTIMAL_CONTROL.md  TECHNIQUE_10_GRAPH_NEURAL_NETWORKS.md  TECHNIQUE_11_COMPUTER_VISION_3D_RECONSTRUCTION.md  TRANSCENDENT_ENGINEERING (1).md  VENUE_PLATFORM_MASTER_COMMAND.md  _gantt_part1.txt  _gen.cjs  _gen_orchestrator.cjs  _gen_pareto.cjs  _orch_header.b64  _orch_header.txt  _orch_p1.txt  _orch_p2.txt  _orch_p3.txt  _orch_p4.txt  _orch_part1.b64  _stdin_writer.cjs  _test_write.txt  _write_files.js  _write_pareto.js  _writer.cjs  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
apps/ml-api/: pyproject.toml
apps/ml-api/src/: __init__.py
apps/ml-api/src/ot/: __init__.py  barycenter.py  fgw.py  inverse_ot.py  solver.py
apps/ml-api/src/routes/: matching.py  tda.py
apps/ml-api/src/tda/: __init__.py  distance.py  layout.py  mapper.py  persistence.py  simplicial.py  timeseries.py  vectorize.py  visualize.py
docs/: AGENT_COMMAND_FRAMEWORK_v1.md  DATA_MODEL.md  V1_PROMISE.md
scripts/: migrate-technique-track.mjs  validate-command-dependencies.mjs  validate-command-specs.mjs  validate-technique-track-links.mjs
src/: App.tsx
(+324 files in other folders)
