[project]
name = "omni-twin-ml-api"
version = "0.1.0"
description = "ML API for Optimal Transport venue-event matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "POT>=0.9.5",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
